syntax = "proto3";

package coresdk.activity_result;

import "common.proto";

/// Used to report activity completion to core and to resolve the activity in a workflow activation
message ActivityResult {
    // The token from the [ActivityTask] being completed
    bytes task_token = 1;
    oneof status {
        Success completed = 2;
        Failure failed = 3;
        Cancelation canceled = 4;
    }
}

/// Used in ActivityResult to report cancellation
message Cancelation {
    common.Payload details = 1;
}

/// Used in ActivityResult to report successful completion
message Success {
    common.Payload result = 1;
}

/// Used in ActivityResult to report failure
message Failure {
    common.UserCodeFailure failure = 1;
}

